==> AstghikArakelian/oqni/projects/hw/ob1203/ob1203_lib/Src/BMX055.c <==
#include "BMX055.h"
#include "Math.h"
#include <math.h>
#include "stm32f1xx_hal.h"
#define PI       3.14159265358979323846264338328      // Pi
#define Kp 2.0f * 5.0f // these are the free parameters in the Mahony filter and fusion scheme, Kp for proportional feedback, Ki for integral
#define Ki 0.0f

uint8_t readByte(uint8_t address, uint8_t subAddress)
{
#if defined(Arduino)
	uint8_t data; // `data` will store the register data
	Wire.beginTransmission(address);         // Initialize the Tx buffer
	Wire.write(subAddress);	                 // Put slave register address in Tx buffer
	Wire.endTransmission(I2C_NOSTOP);        // Send the Tx buffer, but send a restart to keep connection alive
//	Wire.endTransmission(false);             // Send the Tx buffer, but send a restart to keep connection alive
//	Wire.requestFrom(address, 1);  // Read one byte from slave register address
	Wire.requestFrom(address, (size_t) 1);   // Read one byte from slave register address
	data = Wire.read();                      // Fill Rx buffer with result
	return data;                             // Return data read from slave register
#endif

#if defined(HAL_STM32F103)

	uint8_t cmd_size = 1;
	uint8_t count = 1;
	uint8_t data = 0;
//	uint16_t addr = address;

	ob1203_I2C_Read(address, &subAddress, &data, cmd_size, count);

	return data;
#endif
}

void readBytes(uint8_t address, uint8_t subAddress, uint8_t count, uint8_t * dest)
{
#if defined(Arduino)
	Wire.beginTransmission(address);   // Initialize the Tx buffer
	Wire.write(subAddress);            // Put slave register address in Tx buffer
	Wire.endTransmission(I2C_NOSTOP);  // Send the Tx buffer, but send a restart to keep connection alive
//	Wire.endTransmission(false);       // Send the Tx buffer, but send a restart to keep connection alive
	uint8_t i = 0;
//        Wire.requestFrom(address, count);  // Read bytes from slave register address
        Wire.requestFrom(address, (size_t) count);  // Read bytes from slave register address
	while (Wire.available()) {
        dest[i++] = Wire.read(); }         // Put read results in the Rx buffer
#endif

#if defined(HAL_STM32F103)
	uint8_t cmd_size = 1;
	HAL_I2C_Mem_Read(phi2c, address<< 1, subAddress, cmd_size, dest, count, 10);
#endif
}
