==> AstghikArakelian/oqni/projects/hw/ob1203_esp32/components/afe_lib/bmx055.c <==
#include "BMX055.h"
#include "Math.h"
#include <math.h>
#include "driver/i2c.h"
#define PI       3.14159265358979323846264338328      // Pi
#define Kp 2.0f * 5.0f // these are the free parameters in the Mahony filter and fusion scheme, Kp for proportional feedback, Ki for integral
#define Ki 0.0f

uint8_t readByte(uint8_t address, uint8_t subAddress)
{
//	uint8_t data; // `data` will store the register data
//	Wire.beginTransmission(address);         // Initialize the Tx buffer
//	Wire.write(subAddress);	                 // Put slave register address in Tx buffer
//	Wire.endTransmission(I2C_NOSTOP);        // Send the Tx buffer, but send a restart to keep connection alive
////	Wire.endTransmission(false);             // Send the Tx buffer, but send a restart to keep connection alive
////	Wire.requestFrom(address, 1);  // Read one byte from slave register address
//	Wire.requestFrom(address, (size_t) 1);   // Read one byte from slave register address
//	data = Wire.read();                      // Fill Rx buffer with result
//	return data;                             // Return data read from slave register

	uint8_t cmd_size = 1;
	uint8_t count = 1;
	uint8_t data = 0;
//	i2c_master_write_read_device(0, address<< 1, subAddress, cmd_size, &data, count, 10);
//	return data;

uint16_t addr = address;

	i2c_master_write_to_device	(0, addr, &subAddress, cmd_size, 10);

	i2c_master_read_from_device (0, addr, &data, count, 10);

	return data;

}

void readBytes(uint8_t address, uint8_t subAddress, uint8_t count, uint8_t * dest)
{
//	Wire.beginTransmission(address);   // Initialize the Tx buffer
//	Wire.write(subAddress);            // Put slave register address in Tx buffer
//	Wire.endTransmission(I2C_NOSTOP);  // Send the Tx buffer, but send a restart to keep connection alive
////	Wire.endTransmission(false);       // Send the Tx buffer, but send a restart to keep connection alive
//	uint8_t i = 0;
////        Wire.requestFrom(address, count);  // Read bytes from slave register address
//        Wire.requestFrom(address, (size_t) count);  // Read bytes from slave register address
//	while (Wire.available()) {
//        dest[i++] = Wire.read(); }         // Put read results in the Rx buffer

	uint8_t cmd_size = 1;
	i2c_master_write_read_device(0, address, &subAddress, cmd_size, dest, count, 10);
}
